--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 	"license": "MIT",
 	"homepage": "https://github.com/ramonmatias19/n8n-nodes-medx65",
 	"author": {
-		"name": "Your Name",
-		"email": "your.email@example.com"
+		"name": "Ramon Matias",
+		"email": "contato@lumiaria.com.br"
 	},
 	"repository": {
 		"type": "git",
