--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "n8n-nodes-medx65",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"description": "n8n nodes to interact with MedX65 medical system API",
 	"keywords": [
 		"n8n-community-node-package"
@@ -35,7 +35,8 @@
 		"nodes": [
 			"dist/nodes/MedX65/MedX65.node.js"
 		]
-	},	"devDependencies": {
+	},
+	"devDependencies": {
 		"@types/node": "^18.16.16",
 		"gulp": "^4.0.2",
 		"n8n-workflow": "*",
