fix: corrigir erros de TypeScript e compatibilidade com n8n-workflow

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"format": "prettier nodes credentials --write",
 		"lint": "eslint nodes credentials package.json",
 		"lintfix": "eslint nodes credentials package.json --fix",
-		"prepublishOnly": "npm run build && npm run lint -s"
+		"prepublishOnly": "npm run build"
 	},
 	"files": [
 		"dist"
@@ -38,11 +38,15 @@
 	},
 	"devDependencies": {
 		"@types/node": "^18.16.16",
+		"@types/request": "^2.48.12",
+		"@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@typescript-eslint/parser": "^5.0.0",
+		"eslint": "^8.0.0",
 		"gulp": "^4.0.2",
-		"n8n-workflow": "*",
+		"n8n-workflow": "^1.0.0",
 		"typescript": "^4.8.4"
 	},
 	"peerDependencies": {
-		"n8n-workflow": "*"
+		"n8n-workflow": "^1.0.0"
 	}
 }
